[project]
name = "nakamap"
dynamic = ["version"]
description = "IMAS IDS generator scripts for JT-60SA"
authors = [
    {name = "Simon McIntosh",email = "simon.mcintosh@iter.org"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "seaborn",
    "xarray",
    "appdirs",
    "nakasvr @ git+https://github.com/Simon-McIntosh/nakasvr.git",
]

#[project.optional-dependencies]
#imas = ["imaspy @ git+https://git.iter.org/scm/imas/imaspy.git"]

[[tool.poetry.source]]
name = "iter"
url = "https://pypi.iter.org/simple/"
priority = "explicit"

[build-system]
requires = [
  "poetry-core @ git+https://github.com/radoering/poetry-core.git@pep621-support",
  "poetry-dynamic-versioning>=1.4"
]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "nakamap"
version = "0.0.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format = "{base}+{distance}.{commit}"
